# clipygo-plugin-msteams

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: auth.rs  config.rs  graph.rs  handler.rs  main.rs
