[package]
name = "clipygo-plugin-msteams"
version = "0.2.1"
edition = "2021"
description = "Microsoft Teams target provider for clipygo"
authors = ["Georg Nelles"]
license = "MIT"
repository = "https://github.com/it-atelier-gn/clipygo-plugin-msteams"

[[bin]]
name = "clipygo-plugin-msteams"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
dirs = "6"
urlencoding = "2"
